<resources>
    <string name="app_name">快店助手</string>
    <string name="cash_desk">收款</string>
    <string name="balance">余额</string>
    <string name="assistant">平台助手</string>
    <string name="school">商学院</string>

    <string name="load_more">加载中&#8230;&#8230;&#8230;</string>
    <string name="load_error">加载失败,点击重试</string>

    <!--登录注册页面-->
    <string name="login">登录</string>
    <string name="input_phone">输入您的手机号</string>
    <string name="input_pwd">输入密码(6至16位)</string>
    <string name="input_pwd_confirm">再次输入密码</string>
    <string name="input_pwd_old">输入原密码</string>
    <string name="input_pwd_new">输入新密码(6至16位)</string>
    <string name="input_pwd_new_confirm">再次输入新密码</string>
    <string name="input_shop_name">请输入店铺名称</string>
    <string name="sign_up">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="err_no_username">请输入正确的手机号</string>
    <string name="err_no_pwd">请输入密码</string>
    <string name="err_length_pwd">密码长度为6&#8211;16位</string>
    <string name="input_verifycode">输入验证码</string>
    <string name="modify_confirm">确认修改</string>
    <string name="modify_pwd">修改密码</string>

    <!--设置页面-->
    <string name="change_shop_name">修改店铺名</string>
    <string name="change_pwd">修改密码</string>
    <string name="feedback">帮助反馈</string>
    <string name="about">关于</string>
    <string name="income_qrcode">店铺收款码</string>
    <string name="income_account">查看流水</string>
    <string name="income_account_pay_account">支付账户:&#160;</string>
    <string name="income_account_pay_type">支付方式:&#160;</string>
    <string name="income_title">收款</string>
    <string name="income_account_title">流水记录</string>
    <string name="income_qrcode_pay_title">在此扫码付款</string>
    <string name="income_qrcode_label_bottom">快店助手 钱包</string>
    <string name="income_weixin_pay">微信支付</string>
    <string name="income_zhifubao_pay">支付宝</string>
    <string name="income_qrcode_title">店铺收款码</string>
    <string name="income_qrcode_save">保存到相册</string>

    <!--账户相关模块-->
    <string name="account_not_bind">还没有绑定提现账号，需要先绑定提现账号才能提现</string>
    <string name="withdraw_limit_info">每天最多提现一次，累计提现超过5000元，最低提现提升至500元</string>
    <string name="err_no_alipay">您未绑定支付宝账号</string>
    <string name="err_no_bankcard">您未绑定银行卡</string>
    <string name="err_withdraw_num">请输入正确的提现金额</string>
    <string name="err_over_balance">提现金额不能大于账户余额</string>
    <string name="waitting_bankaccount_verify">银行卡信息正在审核中，请耐心等待</string>
    <string name="waitting_alipay_verify">支付宝信息正在审核中，请耐心等待</string>
    <string name="success_alipay_verify">支付宝信息审核成功</string>
    <string name="err_alipay_verify">支付宝信息审核失败，请重新填写提交</string>
    <string name="owner_name_be_chinese">户名只能是中文</string>
    <string name="enter_valid_account">账号格式不正确，请输入手机号或邮箱</string>
    <string name="err_bankaccount_verify">银行卡信息审核失败，请重新填写提交</string>

    <string name="choose_bank">请选择开户行</string>
    <string name="choose_province_and_city">请选择开户行省市</string>
    <string name="enter_bank_number">请输入银行账号</string>
    <string name="enter_bank_owner_name">请输入户名</string>
    <string name="success_bankaccount_verify">银行卡信息审核成功</string>
    <string name="account_balance_records_title">账单记录</string>

</resources>
