<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">

    <RelativeLayout style="@style/TitleBarStyle">

        <TextView
            style="@style/TitleBarTextStyle"
            android:layout_centerInParent="true"
            android:text="@string/login"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/BaseTextViewStyle"
            android:gravity="center"
            android:text="  +86 |"/>

        <EditText
            android:id="@+id/et_mobile"
            style="@style/BaseEditTextStyle"
            android:layout_gravity="center_horizontal"
            android:hint="@string/input_phone"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>

        <EditText
            android:id="@+id/et_pwd"
            style="@style/BaseEditTextStyle"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/BaseButtonStyle"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btn_signup"
        style="@style/BaseButtonStyle"
        android:text="@string/sign_up"/>

    <TextView
        android:padding="@dimen/distance16"
        android:id="@+id/tv_forget_pwd"
        style="@style/BaseTextViewStyle"
        android:text="@string/forget_pwd"/>

</LinearLayout>
