<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">


    <include layout="@layout/title_bar_common"/>

    <LinearLayout style="@style/LoginItemLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sign_up_pwd"/>

        <EditText
            android:id="@+id/et_pwd_old"
            style="@style/LoginEditTextStyle"
            android:hint="@string/input_pwd_old"
            android:inputType="textPassword"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout style="@style/LoginItemLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sign_up_pwd"/>

        <EditText
            android:id="@+id/et_pwd_new"
            style="@style/LoginEditTextStyle"
            android:hint="@string/input_pwd_new"
            android:inputType="textPassword"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout style="@style/LoginItemLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sign_up_pwd"/>

        <EditText
            android:id="@+id/et_pwd_new_confirm"
            style="@style/LoginEditTextStyle"
            android:hint="@string/input_pwd_new_confirm"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/distance16"
        android:text="@string/modify_confirm"/>

</LinearLayout>
