<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">


    <include layout="@layout/title_bar_common"/>

    <LinearLayout
        style="@style/LoginItemLayout"
        android:layout_marginTop="@dimen/distance32">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/signup_phone"/>

        <EditText
            android:id="@+id/et_mobile"
            style="@style/LoginEditTextStyle"
            android:hint="@string/input_phone"
            android:inputType="phone"/>

        <Button
            android:id="@+id/btn_verify_code"
            style="@style/BaseButtonStyle"
            android:text="验证手机"/>
    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout style="@style/LoginItemLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/signup_verify"/>

        <EditText
            android:id="@+id/et_verify_code"
            style="@style/LoginEditTextStyle"
            android:hint="@string/input_verifycode"
            android:inputType="number"/>
    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout style="@style/LoginItemLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sign_up_pwd"/>

        <EditText
            android:id="@+id/et_pwd"
            style="@style/LoginEditTextStyle"
            android:hint="@string/input_pwd"
            android:inputType="textPassword"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout style="@style/LoginItemLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/sign_up_pwd"/>

        <EditText
            android:id="@+id/et_pwd_confirm"
            style="@style/LoginEditTextStyle"
            android:hint="@string/input_pwd_again"
            android:inputType="textPassword"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="@style/Divider"/>

        <LinearLayout style="@style/LoginItemLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/sign_up_pwd"/>

            <EditText
                android:id="@+id/et_shop_name"
                style="@style/LoginEditTextStyle"
                android:hint="@string/input_shop_name"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_marginTop="@dimen/distance16"
        android:id="@+id/btn_signup"
        style="@style/ButtonStyle"
        android:text="@string/sign_up"/>


</LinearLayout>
