<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/title_bar_common"/>

    <LinearLayout
        android:id="@+id/ll_shop_info"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@mipmap/setting_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_shop_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/setting_icon"/>

        <TextView
            android:id="@+id/tv_shop_name"
            style="@style/BaseTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance4"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_shop_mobile"
            style="@style/BaseTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance4"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View style="@style/Divider"/>

    <RelativeLayout
        android:id="@+id/rl_change_shop_name"
        style="@style/BaseItemLayout"
        android:visibility="gone">

        <TextView
            style="@style/BaseItemTitle"
            android:text="@string/change_shop_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right"/>
    </RelativeLayout>

    <View
        style="@style/Divider"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/rl_change_pwd"
        style="@style/BaseItemLayout"
        android:background="@drawable/selector_item_bg">

        <TextView
            style="@style/BaseItemTitle"
            android:text="@string/change_pwd"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right"/>
    </RelativeLayout>

    <View
        style="@style/Divider"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/rl_feedback"
        style="@style/BaseItemLayout"
        android:visibility="gone">

        <TextView
            style="@style/BaseItemTitle"
            android:text="@string/feedback"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right"/>
    </RelativeLayout>

    <View style="@style/Divider"/>

    <RelativeLayout
        android:id="@+id/rl_about"
        style="@style/BaseItemLayout"
        android:background="@drawable/selector_item_bg">

        <TextView
            style="@style/BaseItemTitle"
            android:text="@string/about"/>

        <TextView
            android:id="@+id/tv_version"
            style="@style/BaseItemTitle"
            android:layout_alignParentRight="true"
            android:text="@string/about"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right"
            android:visibility="gone"/>
    </RelativeLayout>

    <View style="@style/Divider"/>

    <Button
        android:id="@+id/btn_logout"
        style="@style/ButtonStyle"
        android:layout_marginLeft="@dimen/distance32"
        android:layout_marginRight="@dimen/distance32"
        android:layout_marginTop="@dimen/distance48"
        android:text="退出"/>

</LinearLayout>